assert-struct/tests/snapshots/enum_struct_patterns__enum_variant_wrong_struct.snap
---
source: assert-struct/tests/enum_struct_patterns.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/enum_struct_patterns_errors/enum_variant_wrong_struct.rs:34:20
   |
34 |         statement: Statement::Query(Query {
   |                    ^^^^^^^^^^^^^^^^ expected variant Statement::Query(...), got Update(Update { table: "users" })
